testsuite/poke.pkl/strcons-diag-2.pk
/* { dg-do compile } */

var s
    = string (32, "bar", 3#B); /* { dg-error "argument" } */
